// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: stories > Ant stories > Story Tagged 1`] = `
"<div contenteditable="true">
  <span>We preset five different colors. You can set color property such as </span>
  <span contenteditable="false">
    <span>success</span>
  </span>
  <span>, </span>
  <span contenteditable="false">
    <span>processing</span>
  </span>
  <span>, </span>
  <span contenteditable="false">
    <span>error</span>
  </span>
  <span>, </span>
  <span contenteditable="false">
    <span>default</span>
  </span>
  <span> and </span>
  <span contenteditable="false">
    <span>warning</span>
  </span>
  <span> to show specific status.</span>
</div>"
`;

exports[`Component: stories > Material stories > Story Chipped 1`] = `
"<div contenteditable="true">
  <span>Hello beautiful the </span>
  <span contenteditable="false">
    <div>
      <span>first</span>
    </div>
  </span>
  <span> world from the </span>
  <span contenteditable="false">
    <div>
      <span>second</span>
    </div>
  </span>
  <span> </span>
</div>"
`;

exports[`Component: stories > Material stories > Story Mentions 1`] = `
"<div contenteditable="true">
  <span>Enter the '@' for calling mention list:&#10;- Hello @Agustina and </span>
  <span contenteditable="false">
    <div>
      <div>R</div>
      <span>Ruslan</span>
    </div>
  </span>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Material stories > Story Overridden 1`] = `
"<div>
  <div contenteditable="true">
    <span>Hello beautiful the </span>
    <span contenteditable="false">
      <div>
        <span>first</span>
      </div>
    </span>
    <span> world from the </span>
    <span contenteditable="false">
      <div>
        <span>second</span>
      </div>
    </span>
    <span> </span>
  </div>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story Overridden 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>tag</span>
    </div>
  </span>
  <span>. Then press the </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>Enter</span>
    </div>
  </span>
  <span> to finish. For example: @hello</span>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story TaggedInput 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>tag</span>
    </div>
  </span>
  <span>. Then press the </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>Enter</span>
    </div>
  </span>
  <span> to finish. For example: @hello</span>
</div>"
`;
